--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Secrect Agent Supply Inc.</title>
-    <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
-    <link rel="stylesheet" type"text/css" href="resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="Resources/CSS/reset.css">
+    <link rel="stylesheet" type"text/css" href="Resources/CSS/style.css">
   </head>
   <body>
     <div class="website-container">
